--- a/CashCalculator/MainWindow.xaml
+++ b/CashCalculator/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CashCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Cash Calculator beta 0.2.1.1"
+        Title="Cash Calculator"
         Height="640"
         Width="420"
         ResizeMode="CanMinimize"
@@ -283,12 +283,12 @@
                     </DataGridTemplateColumn.CellTemplate>
                   </DataGridTemplateColumn>
                   <!-- Description Column -->
-                  <DataGridTextColumn Header="Итого, ₽"
+                  <DataGridTextColumn Header="Итоги"
                                       Binding="{Binding Description}"
                                       Width="0.8*"
                                       IsReadOnly="True"/>
                   <!-- Value Column (Expected / Difference) -->
-                  <DataGridTextColumn Header=""
+                  <DataGridTextColumn Header="Сумма, ₽"
                                       Binding="{Binding Value,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                       Width="*"/>
                 </DataGrid.Columns>
@@ -380,9 +380,9 @@
               <TextBlock FontWeight="Bold"
                          FontSize="14"
                          Margin="0 0 0 10"
-                         Text="Сведенья о сборке"/>
+                         Text="Сведения о сборке"/>
               
-              <TextBlock Text="build-0.2.1.1-beta.4"                    Margin="0 0 0 4"/>
+              <TextBlock Text="build-0.2.1.2-beta.5"                    Margin="0 0 0 4"/>
               
               <TextBlock Margin="0 10 0 0"
                          FontSize="12"
